--- a/ui/src/app/pages/user/schedule/schedule.component.html
+++ b/ui/src/app/pages/user/schedule/schedule.component.html
@@ -1,7 +1,7 @@
-<p>schedule</p>
-
+<div class="text-center ">
+  <h1>Расписание</h1>
 <div *ngIf="client" class="client-request">
-  <table>
+  <table class="mat-elevation-z8">
     <tr>
       <th>№</th>
       <th>Дата</th>
@@ -22,8 +22,9 @@
     </tr>
   </table>
   <br>
-  <button class="btn btn-primary" type="submit" [routerLink]="'/clientStart'">
+  <button class="btn btn-primary" type="submit" [routerLink]="'/startPage'">
     <span>Назад</span>
   </button>
 
+</div>
 </div>
