--- a/ui/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/ui/src/app/pages/auth/sign-in/sign-in.component.html
@@ -2,10 +2,10 @@
   <div class="col-md-6 mx-auto text-center">
     <div class="header-title">
       <h1 class="wv-heading--title">
-        Welcome to Talanto!
+        Добро пожаловать в Talanto!
       </h1>
       <h1 class="wv-heading--title">
-        Please sign in
+        Пожалуйста, войдите в систему
       </h1>
     </div>
   </div>
@@ -13,18 +13,18 @@
   <div class="row">
     <div class="col-md-4 mx-auto">
       <div *ngIf="flag" class="alert" id="login_error">
-        <span>Invalid login or password.</span>
+        <span>Неверный логин или пароль.</span>
       </div>
 
       <div class="form">
 
         <mat-form-field appearance="outline">
-          <mat-label>Login</mat-label>
+          <mat-label>Введите логин</mat-label>
           <input matInput [(ngModel)]="login" placeholder="exampleLogin123">
         </mat-form-field>
 
         <mat-form-field appearance="outline">
-          <mat-label>Enter your password</mat-label>
+          <mat-label>Введите пароль</mat-label>
           <input matInput [(ngModel)]="password" [type]="hide ? 'password' : 'text'">
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                   [attr.aria-pressed]="hide">
@@ -33,7 +33,7 @@
         </mat-form-field>
 
         <div class="text-center ">
-          <button (click)="signIn()" class=" btn btn-block send-button tx-tfm">Sign In</button>
+          <button (click)="signIn()" class=" btn btn-block send-button tx-tfm">Войти</button>
         </div>
         <div class="col-md-12 ">
           <div class="login-or">
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="form-group">
-          <button (click)="createAccount()" class=" btn btn-block send-button tx-tfm">Create Account</button>
+          <button (click)="createAccount()" class=" btn btn-block send-button tx-tfm">Зарегистрироваться</button>
         </div>
       </div>
     </div>
