--- a/ui/src/app/pages/client/complaint/complaint.component.html
+++ b/ui/src/app/pages/client/complaint/complaint.component.html
@@ -5,7 +5,7 @@
   <label for="idLesson">id урока</label>
   <input [(ngModel)]="complaint.idLesson"
          type="number"
-         placeholder="Enter series"
+         placeholder="Введите id урока"
          id="idLesson"
          required>
 </div>
